[package]
name = "i_c_u"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
img_hash = "3.2.0"
tesseract = "0.11.0"
image = { version = "0.23.14", features = ["png", "jpeg"] }
chrono = "0.4.19"
rand = "0.8.5"
base64 = "0.13.0"

[features]
